<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="st.crimelog.CrimeFragment"
    android:orientation="vertical"
    android:padding="5dp">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        android:id="@+id/crime_list_title"
        android:textSize="20dp"
        style="?android:listSeparatorTextViewStyle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_title"
        android:hint="@string/crime_title_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_date_label"
        android:id="@+id/crime_date_label"
        android:textSize="20dp"
        style="?android:listSeparatorTextViewStyle" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/crime_date" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crime_solved"
            android:id="@+id/crime_solved" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_photo_label"
        android:id="@+id/crime_photo_label"
        android:textSize="20dp"
        style="?android:listSeparatorTextViewStyle" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/crime_take_photo"
        android:src="@android:drawable/ic_menu_camera" />

</LinearLayout>
